<resources>
    <string name="app_name">WhatsApp Clone</string>
    <string name="digite_email">Digite seu email</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="digite_nome">Digite seu nome</string>
    <string name="logar">LOGAR</string>
    <string name="sem_conta">Não possui uma conta? Cadastre-se</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="manter_conectado">Manter Conectado</string>
    <string name="pesquisa">Pesquisar</string>
    <string name="configuracao">Configurações</string>
    <string name="sair">Sair</string>
    <string name="info_nome_user">Esse não é o seu nome de usuário nem sua senha. Esse nome ficará visível para todos os seus contatos do WhatsApp Clone</string>
    <string name="nome_usuarios">Nome Usuário</string>
    <string name="email_usuarios">Email Usuário</string>
    <string name="new_group">Novo grupo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="digite_aqui">Digite sua mensagem aqui!</string>
    <string name="ultima_msg">Ultima Mensagem</string>
</resources>